--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "google-fonts": "^1.0.0",
+    "luxon": "^3.4.4",
+    "node-fetch": "^2.7.0",
+    "source-map-loader": "^5.0.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
